新增：输出 300MB 内展示轻量版
新增独立 Demo Lite 配置、浏览器启动器和 Windows 安装构建；移除内置 AI、语音模型、WebView2 与非必要媒体工具，限制 JVM 和并发，并在安装载荷超过 300 MiB 时阻止构建。当前产物安装后为 276.5 MiB。